# jswt

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  foo.jswt  test.jswt
jswt-ast-lowering/: Cargo.toml
jswt-ast-lowering/src/: _lib.rs  class.rs  gen.rs  lib.rs
jswt-ast-lowering/src/snapshots/: jswt_ast_lowering__test__class_declaration_desugars_into_functions.snap  jswt_ast_lowering__test__class_declaration_desugars_new_expression.snap  jswt_ast_lowering__test__class_declaration_lowers_class_fields.snap  jswt_ast_lowering__test__class_declaration_lowers_methods_into_functions.snap  jswt_ast_lowering__test__class_declaration_lowers_new_expression_into_constructor_invocation.snap  jswt_ast_lowering__test__class_declaration_lowers_this_binding.snap
jswt-codeframe/: Cargo.toml
jswt-codeframe/src/: lib.rs
jswt-codegen/: Cargo.toml
jswt-codegen/src/: lib.rs  symbols.rs
jswt-codegen/src/snapshots/: jswt_codegen__test__ast_with_empty_function_generates_module.snap  jswt_codegen__test__ast_with_empty_function_with_params_and_return_value_generates_module.snap  jswt_codegen__test__ast_with_empty_function_with_params_generates_module.snap  jswt_codegen__test__ast_with_function_containing_return_expression_generates_module.snap  jswt_codegen__test__empty_ast_generates_empty_module.snap
jswt-compiler/: Cargo.toml
jswt-compiler/src/: assert.rs  env.rs  lib.rs  main.rs
jswt-compiler/src/codegen/: mod.rs
jswt-compiler/src/common/: symbol.rs
jswt-compiler/src/errors/: mod.rs
jswt-compiler/src/parser/: mod.rs
jswt-compiler/src/semantics/: mod.rs  symbol.rs
jswt-compiler/src/snapshots/: jswt__test__variable_not_found_semantic_error.snap  jswt__test__variable_not_found_semantic_error.snap.new
jswt-compiler/src/tokenizer/: mod.rs
jswt-compiler/src/wast/: mod.rs
jswt-compiler/test/: variable-not-found.ast  variable-not-found.jswt
jswt-errors/: Cargo.toml
jswt-errors/src/: codeframe.rs  emitter.rs  highlighter.rs  lib.rs
jswt-errors/src/snapshots/: jswt_errors__codeframe__test__code_frame.snap  jswt_errors__highlighter__test__highlight_source.snap
jswt-parser/: Cargo.toml
jswt-parser/src/: class.rs  errors.rs  expression.rs  function.rs  import.rs  lib.rs  literal.rs  program.rs  statement.rs  variable.rs
jswt-parser/src/snapshots/: jswt_parser__class__test__class_declaration.snap  jswt_parser__class__test__class_declaration.snap.new  jswt_parser__class__test__class_declaration_with_annotations.snap  jswt_parser__class__test__class_declaration_with_export.snap  jswt_parser__class__test__class_method_declaration.snap  jswt_parser__class__test__class_method_declaration_with_this_binding.snap  jswt_parser__class__test__class_method_declaration_with_this_binding.snap.new  jswt_parser__expression__test__parse_argument_expression_with_expression_parameter.snap  jswt_parser__expression__test__parse_arguments_expression.snap  jswt_parser__expression__test__parse_array_literal.snap  jswt_parser__expression__test__parse_member_dot_arguments_expression.snap  jswt_parser__expression__test__parse_member_dot_expression.snap  jswt_parser__expression__test__parse_member_dot_is_left_associative.snap  jswt_parser__expression__test__parse_nested_arguments_expression.snap  jswt_parser__expression__test__parse_nested_member_index_expression.snap  jswt_parser__expression__test__parse_new_expression.snap  jswt_parser__expression__test__parse_postfix_unary_expression.snap  jswt_parser__expression__test__parse_this_expression.snap  jswt_parser__expression__test__parse_unary_expression.snap  jswt_parser__function__test__function_declaration_statement.snap  jswt_parser__function__test__function_declaration_statement_with_block_body.snap  jswt_parser__function__test__function_declaration_statement_with_export_decorator.snap  jswt_parser__function__test__function_declaration_statement_with_one_param.snap  jswt_parser__function__test__function_declaration_statement_with_return_value.snap  jswt_parser__function__test__function_declaration_statement_with_two_params.snap  jswt_parser__function__test__parse_function_declaration_statement_with_two_params_and_return_value.snap  jswt_parser__function__test__parse_function_with_multiple_annotations.snap  jswt_parser__function__test__parse_function_with_native_annotations.snap  jswt_parser__import__test__parse_import_declaration.snap  jswt_parser__literal__test__boolean_literals.snap  jswt_parser__literal__test__float_literals.snap  jswt_parser__literal__test__integer_literals.snap  jswt_parser__literal__test__string_literals.snap  jswt_parser__statement__test__parse_expression_statement.snap  jswt_parser__statement__test__parse_for_statement.snap  jswt_parser__statement__test__parse_if_else_if_statement.snap  jswt_parser__statement__test__parse_if_statement.snap  jswt_parser__statement__test__parse_return_statement.snap  jswt_parser__statement__test__parse_variable_statement.snap  jswt_parser__statement__test__parse_variable_statement_with_type_annotation.snap  (+43 more)
jswt-parser/test/: test_parse_additive_expression_left_associativity.ast  test_parse_multiplicative_expression.ast  test_parse_nested_math_expression_has_correct_precedence.ast
jswt-semantics/: Cargo.toml
jswt-semantics/src/: _globals.rs  _types.rs  bindings.rs  convert.rs  desugaring.rs  error.rs  globals.rs  lib.rs  resolver.rs  symbol.rs  symbols.rs  types.rs
jswt-semantics/src/desugaring/: class_desugaring.rs  mod.rs
jswt-semantics/src/globals/: bindings.rs  class.rs  functions.rs  mod.rs  symbols.rs  variables.rs
jswt-semantics/src/locals/: class.rs  dot.rs  functions.rs  identifier.rs  mod.rs  new.rs  this.rs  variables.rs
jswt-semantics/src/snapshots/: jswt_semantics__desugaring__test__global_resolver_resolves_class_binding.snap  jswt_semantics__globals__test__global_resolver_resolves_class_binding.snap  jswt_semantics__globals__test__global_resolver_resolves_class_binding_with_duplicate_class_error.snap  jswt_semantics__globals__test__global_resolver_resolves_function_bindings.snap  jswt_semantics__test__if_statement_expression_must_be_boolean.snap  (+14 more)
(+226 files in other folders)
