[package]
name = "jswt"
version = "0.1.0"
authors = ["Nish Tahir <nishtahir@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.5.4"
lazy_static = "1.4.0"
wasmer = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.0.0"