[workspace]

members = [
    "jswt-ast",
    "jswt-ast-lowering",    
    "jswt-ast-serializer",
    "jswt-codegen",
    "jswt-common",
    "jswt-compiler",
    "jswt-derive",
    "jswt-errors",
    "jswt-parser",
    "jswt-semantics",
    "jswt-symbols",
    "jswt-tokenizer",
    "jswt-types",
    "jswt-wast"
]