[workspace]

members = [
    "jswt-ast",
    "jswt-ast-serializer",
    "jswt-codegen",
    "jswt-common",
    "jswt-compiler",
    "jswt-derive",
    "jswt-errors",
    "jswt-hir-lowering",
    "jswt-mir-lowering",
    "jswt-parser",
    "jswt-semantics",
    "jswt-symbols",
    "jswt-synthetic",
    "jswt-tokenizer",
    "jswt-wast"
]