[package]
name = "jswt-ast-lowering"
version = "0.1.0"
authors = ["Nish Tahir <nishtahir@outlook.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
jswt-ast = {path = "../jswt-ast"}
jswt-common = {path = "../jswt-common"}
jswt-derive = {path = "../jswt-derive"}
jswt-parser = {path = "../jswt-parser"}
jswt-semantics = {path = "../jswt-semantics"}
jswt-symbols = {path = "../jswt-symbols"}
jswt-tokenizer = {path = "../jswt-tokenizer"}
jswt-types = {path = "../jswt-types"}

[dev-dependencies]
jswt-assert = {path = "../jswt-assert"}
