[package]
name = "jswt-codegen"
version = "0.1.0"
authors = ["Nish Tahir <nishtahir@outlook.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
jswt-ast = {path = "../jswt-ast"}
jswt-common = {path = "../jswt-common"}
jswt-parser = {path = "../jswt-parser"}
jswt-tokenizer = {path = "../jswt-tokenizer"}
jswt-wast = {path = "../jswt-wast"}

[dev-dependencies]
jswt-assert = {path = "../jswt-assert"}