[package]
name = "jswt"
version = "0.1.0"
authors = ["Nish Tahir <nishtahir@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
jswt-ast = {path = "../jswt-ast"}
jswt-ast-lowering = {path = "../jswt-ast-lowering"}
jswt-ast-serializer = {path = "../jswt-ast-serializer"}
jswt-codegen = {path = "../jswt-codegen"}
jswt-common = {path = "../jswt-common"}
jswt-errors = {path = "../jswt-errors"}
jswt-parser = {path = "../jswt-parser"}
jswt-semantics = {path = "../jswt-semantics"}
jswt-tokenizer = {path = "../jswt-tokenizer"}
jswt-wast = {path = "../jswt-wast"}
wasmer = "3.1.1"

[dev-dependencies]
assert_cmd = "2.0.2"
jswt-assert = {path = "../jswt-assert"}
regex = "1.5.4"