[package]
name = "jswt-errors"
version = "0.1.0"
authors = ["Nish Tahir <nishtahir@outlook.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
jswt-parser = {path = "../jswt-parser"}
jswt-semantics = {path = "../jswt-semantics"}
jswt-tokenizer = {path = "../jswt-tokenizer"}
colored = "2.0.0"
regex = "1.5.4"

[dev-dependencies]
jswt-assert = {path = "../jswt-assert"}